--- a/site/layouts/partials/nav-main.html
+++ b/site/layouts/partials/nav-main.html
@@ -1,5 +1,9 @@
-<nav id="navigation" class="navigation">
-  <ul class="navigation__wrapper">
+<div class="showNavigation">
+  <button class="showNavigation__button">Show navigation</button>
+</div>
+
+<nav id="navigation" class="navigation navigation--hidden">
+  <ul class="navigation__list">
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}
       <li class="navigation__item {{ if $currentPage.IsMenuCurrent "main" . }}navigation__item--active{{ end }}">
