--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -6,18 +6,18 @@
   </head>
   <body>
     <div class="container">
-      <div class="container__header">
-        {{ partial "header" . }}
-      </div>
-
       <div class="container__navMain">
         {{ partial "nav-main" . }}
       </div>
 
-      <main class="container__main">
-        {{ block "main" . }}
-        {{ end }}
-      </main>
+      <div class="container__main">
+        {{ partial "header" . }}
+
+        <main class="main">
+          {{ block "main" . }}
+          {{ end }}
+        </main>
+      </div>
     </div>
 
     {{ template "_internal/google_analytics_async.html" . }}
