--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,10 +1,9 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-<meta name="description" content="{{ .Site.Params.description }}">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 {{- .Hugo.Generator -}}
+<meta name="description" content="{{ .Site.Params.description }}">
 
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
