--- a/src/css/imports/_layout.css
+++ b/src/css/imports/_layout.css
@@ -1,5 +1,5 @@
-@import "../variables/_font-family.css";
-@import "../variables/_scale.css";
+@import "_font-family.css";
+@import "_scale.css";
 
 .container {
   padding: var(--ms0);
