--- a/src/css/imports/_utils.css
+++ b/src/css/imports/_utils.css
@@ -2,3 +2,14 @@
 .debug * {
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
+
+.sr-only {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+}
