--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 /* UTILS */
-@import "imports/_utils.css";
 @import "imports/_reset.css";
+@import "imports/_utils.css";
 
 /* PAGE */
 @import "imports/_layout.css";
-@import "imports/_main-navigation.css";
+@import "imports/_nav-main.css";
