--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,6 @@
 
 /* PAGE */
 @import "imports/_layout.css";
-@import "imports/_nav-main.css";
+@import "imports/_section-main.css";
+@import "imports/_section-nav-main.css";
+@import "imports/_section-summary.css";
