--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,18 +1,28 @@
 {{ define "main" }}
-  <h2>News</h2>
+  <h2 class="main__title">News</h2>
   {{ range where .Data.Pages "Section" "news" }}
-    <article class="article">
-      <h2 class="article__title">
-        <a class="article__link" href="{{ .RelPermalink }}">{{ .Title }}</a>
-      </h2>
+    <article class="summary">
+      <header class="summary__header">
+        <h3 class="summary__header__title">
+          <a class="summary__header__title__link" href="{{ .RelPermalink }}">{{ .Title }}</a>
+        </h3>
+        <p class="summary__header__meta">
+          <time pubdate="pubdate" datetime="{{ .Date | dateFormat "2006-01-02T15:04:05Z07:00" }}">
+            Published on {{ .Date | dateFormat "January 2, 2006" }}
+          </time>
+        </p>
+      </header>
 
-      <div class="article__content">
+      <div class="summary__content">
         {{ if .Truncated }}
           {{ .Summary }}
-          <a class="article__readMoreLink" href="{{ .RelPermalink }}">(Read more)</a>
         {{ else }}
           {{ .Content }}
         {{ end }}
+      </div>
+
+      <div class="summary__readMore">
+        <a class="summary__readMore__link" href="{{ .RelPermalink }}">Read more</a>
       </div>
     </article>
   {{ end }}
