Add styling and markup

--- a/src/css/imports/_utils.css
+++ b/src/css/imports/_utils.css
@@ -1,3 +1,5 @@
+@import "_variables.css";
+
 .debug,
 .debug * {
   border: 1px solid rgba(0, 0, 0, 0.5);
@@ -12,4 +14,8 @@
   margin: -1px;
   border: 0;
   padding: 0;
+}
+
+.link {
+  @apply --standardLink;
 }
