--- a/src/css/imports/_section-summary.css
+++ b/src/css/imports/_section-summary.css
@@ -1,22 +1,11 @@
 @import "_variables.css";
 
-.summary {
-  width: 100%;
-  margin-bottom: var(--ms3);
-
-  &:last-of-type { margin-bottom: 0; }
-}
-
-.summary__header { margin-bottom: var(--ms0); }
-
-.summary__header__title {
+.summary__title {
   text-transform: uppercase;
   line-height: var(--lh1);
 }
 
-.summary__header__meta { font-size: var(--ms-1); }
-
-.summary__header__title__link {
+.summary__title__link {
   position: relative;
   text-decoration: none;
   color: var(--colorBlack);
@@ -38,16 +27,6 @@
     top: 100%;
     opacity: 1;
   }
-}
-
-.summary__content {
-  margin-bottom: var(--ms-1);
-
-  & p { margin-bottom: var(--ms0); }
-
-  & a { @apply --standardLink; }
-
-  & *:last-child { margin-bottom: 0; }
 }
 
 .summary__readMore__link { @apply --standardLink; }
