Add styling and markup

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -11,7 +11,7 @@
       </div>
     {{ end }}
 
-    <h1 class="article__header__title">
+    <h1 class="article__header__title balance-text">
       {{ .Title }}
     </h1>
     <p class="article__header__meta">
