--- a/site/layouts/_default/summary.html
+++ b/site/layouts/_default/summary.html
@@ -1,6 +1,6 @@
 <article class="article">
   <header class="article__header">
-    <h3 class="summary__title">
+    <h3 class="summary__title balance-text">
       <a class="summary__title__link" href="{{ .RelPermalink }}">{{ .Title }}</a>
     </h3>
     <p class="article__header__meta">
