--- a/src/css/imports/_section-header.css
+++ b/src/css/imports/_section-header.css
@@ -10,10 +10,10 @@
   background-color: var(--colorWhite);
 }
 
-/* .header__title {} */
-
 .header__title__logotype {
   display: block;
   width: 60%;
   margin: 0 auto;
+
+  & path { fill: var(--colorBlack); }
 }
