--- a/src/css/imports/_section-summary.css
+++ b/src/css/imports/_section-summary.css
@@ -2,6 +2,7 @@
 
 .summary__title {
   font-size: var(--ms1);
+  font-weight: var(--bold);
   text-transform: uppercase;
   line-height: var(--lh1);
 }
