--- a/src/css/imports/_variables.css
+++ b/src/css/imports/_variables.css
@@ -1,6 +1,7 @@
 @import "variables/_border.css";
 @import "variables/_color.css";
 @import "variables/_font-family.css";
+@import "variables/_font-weight.css";
 @import "variables/_line-height.css";
 @import "variables/_link.css";
 @import "variables/_media-queries.css";
