--- a/src/css/imports/_section-nav-main.css
+++ b/src/css/imports/_section-nav-main.css
@@ -17,6 +17,15 @@
   text-indent: -9999px;
   background-color: color(var(--colorWhite) alpha(95%));
   cursor: pointer;
+
+  @media (--breakpoint-not-small) {
+    top: var(--ms1);
+    left: var(--ms1);
+  }
+
+  @media (--breakpoint-large) {
+    display: none;
+  }
 }
 
 .showNavigation__icon {
@@ -68,6 +77,19 @@
   padding: var(--ms3) var(--ms1);
   transform: translate(-50%, -50%);
   transition: left 0.3s ease-in-out, visibility 0.3s linear;
+
+  @media (--breakpoint-large) {
+    visibility: visible;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    padding-left: var(--ms3);
+    transform: unset;
+  }
 }
 
 #showNavigation__checkbox:checked ~ #navigation {
@@ -77,6 +99,7 @@
 
 .navigation__item {
   margin-bottom: var(--ms-1);
+  font-size: var(--ms0);
   opacity: 0;
   transform: translateX(20px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -88,6 +111,16 @@
   &:nth-child(4) { transition-delay: calc(0.05s * 3); }
   &:nth-child(5) { transition-delay: calc(0.05s * 4); }
   &:nth-child(6) { transition-delay: calc(0.05s * 5); }
+
+  @media (--breakpoint-not-small) {
+    font-size: var(--ms1);
+  }
+
+  @media (--breakpoint-large) {
+    font-size: var(--ms0);
+    opacity: 1;
+    transform: unset;
+  }
 }
 
 #showNavigation__checkbox:checked ~ #navigation .navigation__item {
@@ -103,5 +136,26 @@
 
   &--active {
     color: color(var(--colorBlack) lightness(50%));
+  }
+
+  @media (--breakpoint-large) {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 110%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: currentColor;
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+    }
+
+    &:hover::after {
+      top: 100%;
+      opacity: 1;
+    }
   }
 }
