--- a/site/layouts/404.html
+++ b/site/layouts/404.html
@@ -1,6 +1,15 @@
 {{ define "main" }}
-  <h1>404</h1>
-  <p>
-    The page couldn't be found! Sorry...
-  </p>
+<article class="article">
+  <header class="article__header">
+    <h1 class="article__header__title balance-text">
+      The page couldn't be found, sorry!
+    </h1>
+  </header>
+
+  <div class="article__content">
+    <p>
+      Either it has never existed or the url is misspelled.
+    </p>
+  </div>
+</article>
 {{ end }}
