--- a/site/layouts/news/single.html
+++ b/site/layouts/news/single.html
@@ -16,7 +16,7 @@
     </h1>
     <p class="article__header__meta">
       <time pubdate="pubdate" datetime="{{ .Date | dateFormat "2006-01-02T15:04:05Z07:00" }}">
-        Published {{ .Date | dateFormat "January 2, 2006" }}
+        Published on {{ .Date | dateFormat "January 2, 2006" }}
       </time>
     </p>
   </header>
