--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -12,6 +12,9 @@
   <meta name="google-site-verification" content="{{ . }}" />
 {{ end }}
 
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
 <link rel="canonical" href="{{ .Permalink }}">
 
 <link rel="stylesheet" href="/css/main.css"/>
