--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -3,10 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 {{- .Hugo.Generator -}}
-<meta name="description" content="{{ .Site.Params.description }}">
 
-{{ template "_internal/opengraph.html" . }}
-{{ template "_internal/twitter_cards.html" . }}
+{{ partial "social" . }}
 
 {{- with .Site.Params.google_verify_meta -}}
   <meta name="google-site-verification" content="{{ . }}" />
