--- a/site/layouts/partials/social.html
+++ b/site/layouts/partials/social.html
@@ -1,25 +1,46 @@
-<!-- Search Engine -->
+{{ "<!-- Search Engine -->" | safeHTML }}
 <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
 {{ with .Params.images }}{{ range first 1 . }}
   <meta name="image" content="{{ . | absURL }}">
 {{ end }}{{ end }}
 
-<!-- Schema.org for Google -->
+{{ "<!-- Schema.org for Google -->" | safeHTML }}
 <meta itemprop="name" content="{{ .Title }}">
 <meta itemprop="description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
 {{ with .Params.images }}{{ range first 1 . }}
   <meta itemprop="image" content="{{ . | absURL }}">
 {{ end }}{{ end }}
 
-<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="{{ .Title }}">
-<meta name="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
-<meta name="og:url" content="{{ .Permalink }}">
-<meta name="og:site_name" content="{{ .Site.Title }}">
-<meta name="og:locale" content="{{ .Site.LanguageCode }}">
-{{ with .Site.Params.fb_app_id }}<meta name="fb:app_id" content="{{ . }}">{{ end }}
-{{ with .Site.Params.fb_admin }}<meta name="fb:admins" content="{{ . }}">{{ end }}
-<meta name="og:type" content="website">
+{{ "<!-- Open Graph general -->" | safeHTML }}
+<meta property="og:title" content="{{ .Title }}">
+<meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ if .IsPage }}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}">
+<meta property="og:url" content="{{ .Permalink }}">
+<meta property="og:site_name" content="{{ .Site.Title }}">
+<meta property="og:locale" content="{{ .Site.LanguageCode }}">
+<meta property="og:type" content="website">
 {{ with .Params.images }}{{ range first 6 . }}
   <meta property="og:image" content="{{ . | absURL }}" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 {{ end }}{{ end }}
+
+{{ "<!-- Open Graph Facebook -->" | safeHTML }}
+{{ with .Site.Params.fb_app_id }}<meta property="fb:app_id" content="{{ . }}">{{ end }}
+{{ with .Site.Params.fb_admin }}<meta property="fb:admins" content="{{ . }}">{{ end }}
+
+
+{{ "<!-- Open Graph article -->" | safeHTML }}
+{{ if .IsPage }}
+  {{ if not .PublishDate.IsZero }}
+    <meta property="article:published_time" content="{{ .PublishDate.Format "2006-01-02T15:04:05-07:00" | safeHTML }}" />
+  {{ else if not .Date.IsZero }}
+    <meta property="article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}" />
+  {{ end }}
+  {{ if not .Lastmod.IsZero }}
+    <meta property="article:modified_time" content="{{ .Lastmod.Format "2006-01-02T15:04:05-07:00" | safeHTML }}" />
+  {{ end }}
+{{ else }}
+  {{ if not .Date.IsZero }}
+    <meta property="og:updated_time" content="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}"/>
+  {{ end }}
+{{ end }}
