Add workaroud for build issue on Netlify

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header{{ if eq .Type "exhibition" }} sr-only{{ end }}">
+<header class="header">
   <h1 class="header__title">
     <a href="/">
       <span class="header__title__text sr-only">Studio NOCK</span>
