--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -12,7 +12,9 @@
 
     <div class="container">
       <div class="container__header">
-        {{ partial "header" . }}
+        {{ block "header" . }}
+          {{ partial "header" . }}
+        {{ end }}
       </div>
 
       <div class="container__main">
