--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -17,4 +17,4 @@
 
 <link rel="canonical" href="{{ .Permalink }}">
 
-<link rel="stylesheet" href="/css/main.css"/>
+{{ partial "critical-styles" . }}
