--- a/src/css/critical.css
+++ b/src/css/critical.css
@@ -1,5 +1,13 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+/* UTILS */
+@import "./imports/_reset.css";
+@import "./imports/_utils.css";
+
+/* PAGE */
+@import "./imports/_layout.css";
+@import "./imports/_section-article.css";
+@import "./imports/_section-exhibition.css";
+@import "./imports/_section-header.css";
+@import "./imports/_section-main.css";
+@import "./imports/_section-nav-main.css";
+@import "./imports/_section-page.css";
+@import "./imports/_section-summary.css";
