--- a/src/css/imports/_module-slideshow.css
+++ b/src/css/imports/_module-slideshow.css
@@ -2,14 +2,7 @@
 
 .slideshow {
   position: relative;
-  padding: 0.5rem;
-}
-
-.slideshow-innercontainer {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  margin: 1rem 0;
 }
 
 .slideshowbtn {
@@ -26,6 +19,7 @@
   line-height: 2rem;
   background-color: transparent;
   z-index: 2;
+  transform: translateY(-50%);
 
   &:focus {
     outline: none;
@@ -45,17 +39,15 @@
   }
 }
 
-.slideshow img {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  will-change: opacity;
-  z-index: 1;
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  transition: height 0.3s ease-in-out;
+}
 
-  &.active {
-    opacity: 1;
-    z-index: 0;
-  }
+.nock-img {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
