--- a/site/layouts/shortcodes/slideshow.html
+++ b/site/layouts/shortcodes/slideshow.html
@@ -1,7 +1,7 @@
 <div class="slideshow">
   <button type="button" class="slideshowbtn slideshowbtn-left">&lt;</button>
   <button type="button" class="slideshowbtn slideshowbtn-right">&gt;</button>
-  <div class="slideshow-container">
+  <div class="slideshow-container nock-loading">
     <div class="loader"><span class="loader-spinner"></span></div>
   </div>
 </div>
